--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,7 @@
 [tox]
-envlist = py33,py34,py35,py36
+envlist = py27,py33,py34,py35,py36
 
 [testenv]
-commands = ghcloneall --help
+commands =
+  ghcloneall --help
+  ghcloneall --version
