Build and upload wheels

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,8 @@
 universal = 1
 
 [metadata]
-license_file = LICENSE
+license_file = LICENCE
 
 [zest.releaser]
 python-file-with-version = ghcloneall.py
+create-wheel = yes
