Set up test coverage measurement

--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,16 @@
 envlist = py27,py35,py36,py37
 
 [testenv]
+deps =
+    pytest
 commands =
-  ghcloneall --help
-  ghcloneall --version
+    pytest {posargs}
+
+[testenv:coverage]
+deps =
+    {[testenv]deps}
+    coverage
+    coverage-python-version
+commands =
+    coverage run -m pytest {posargs}
+    coverage report -m
