--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
   - pypy
   - pypy3
 install:
-  - pip install pytest coverage coveralls
+  - pip install pytest coverage coverage-python-version coveralls
 script:
   - coverage run -m pytest
   - coverage report
