--- a/tox.ini
+++ b/tox.ini
@@ -15,3 +15,9 @@ deps =
 commands =
     coverage run -m pytest {posargs}
     coverage report -m
+
+
+[testenv:flake8]
+deps = flake8
+skip_install = true
+commands = flake8 *.py
