Fight various Travis problems
E.g. Python 2.7 finds a 'backports.configparser' somewhere and uses that
instead of the real Python 2 ConfigParser?  And the backport emits

    DeprecationWarning: You passed a bytestring. Implicitly decoding as
    UTF-8 string. This will not work on Python 3. Please switch to using
    Unicode strings across the board.

Meanwhile pypy3 gets only 99% coverage and I can't tell why, or which
line gets missed.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
 script:
   - coverage run -m pytest
   - flake8 *.py
-  - coverage report --fail-under=100
+  - coverage report --fail-under=100 -m
 after_success:
   - coveralls
 notifications:
