--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ deps =
     coverage-python-version
 commands =
     coverage run -m pytest {posargs}
-    coverage report -m
+    coverage report -m --fail-under=100
 
 
 [testenv:flake8]
