Battling coverage measurements on Python 2 and PyPy
Turns out the concurrent.futures backport actually provides a package
'concurrent', so my fallback was never executed.

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,20 @@ commands =
     coverage run -m pytest {posargs}
     coverage report -m --fail-under=100
 
+[testenv:coverage-py2]
+basepython = python2
+deps = {[testenv:coverage]deps}
+commands = {[testenv:coverage]commands}
+
+[testenv:coverage-pypy]
+basepython = pypy
+deps = {[testenv:coverage]deps}
+commands = {[testenv:coverage]commands}
+
+[testenv:coverage-pypy3]
+basepython = pypy3
+deps = {[testenv:coverage]deps}
+commands = {[testenv:coverage]commands}
 
 [testenv:flake8]
 deps = flake8
