Coverage measurement under pypy3 is bugged
It reports line 130 as being uncovered.

Line 130 is a blank line between two method definitions.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
 script:
   - coverage run -m pytest
   - flake8 *.py
-  - coverage report --fail-under=100 -m
+  - coverage report -m $([[ $TRAVIS_PYTHON_VERSION != pypy3 ]] && echo --fail-under=100)
 after_success:
   - coveralls
 notifications:
