--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,6 +14,7 @@ init:
   - "echo %PYTHON%"
 
 install:
+  - ps: if (-not (Test-Path $env:PYTHON)) { throw "No $env:PYTHON" }
   - "set PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
   - python --version
   - pip install -U virtualenv  # upgrade pip in tox's virtualenvs
