--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: python
-dist: xenial
+cache: pip
 python:
   - 2.7
   - 3.6
@@ -17,6 +17,13 @@ script:
   - coverage report -m $([[ $TRAVIS_PYTHON_VERSION != pypy3 ]] && echo --fail-under=100)
 after_success:
   - coveralls
+
 notifications:
-  email: false
-cache: pip
+  irc:
+    channels:
+      - "chat.freenode.net##mgedmin"
+    on_success: change
+    on_failure: always
+    template:
+      # ping my nick so I get a pushbullet notification on my phone
+      - "mgedmin: %{repository_name} (%{branch}) build %{result}: %{build_url}"
