--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
+dist: focal
 cache: pip
 python:
   - 2.7
@@ -6,7 +7,7 @@ python:
   - 3.7
   - 3.8
   - 3.9
-  - pypy
+  - pypy2
   - pypy3
 install:
   - pip install pytest coverage coverage-python-version coveralls flake8
