--- a/tox.ini
+++ b/tox.ini
@@ -34,4 +34,4 @@ commands = {[testenv:coverage]commands}
 [testenv:flake8]
 deps = flake8
 skip_install = true
-commands = flake8 *.py
+commands = flake8 ghcloneall.py setup.py tests.py
