--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,17 @@ license_file = LICENCE
 [zest.releaser]
 python-file-with-version = ghcloneall.py
 create-wheel = yes
+
+[isort]
+# from X import (
+#   a,
+#   b,
+# )
+multi_line_output = 3
+include_trailing_comma = true
+lines_after_imports = 2
+reverse_relative = true
+default_section = THIRDPARTY
+known_first_party = ghcloneall
+# known_third_party = pytest, ...
+# skip = filename...
