--- a/tox.ini
+++ b/tox.ini
@@ -35,3 +35,8 @@ commands = {[testenv:coverage]commands}
 deps = flake8
 skip_install = true
 commands = flake8 ghcloneall.py setup.py tests.py
+
+[testenv:isort]
+deps = isort
+skip_install = true
+commands = isort {posargs: -c --diff ghcloneall.py setup.py tests.py}
