--- a/tox.ini
+++ b/tox.ini
@@ -40,3 +40,13 @@ commands = flake8 ghcloneall.py setup.py tests.py
 deps = isort
 skip_install = true
 commands = isort {posargs: -c --diff ghcloneall.py setup.py tests.py}
+
+[testenv:check-manifest]
+deps = check-manifest
+skip_install = true
+commands = check-manifest {posargs}
+
+[testenv:check-python-versions]
+deps = check-python-versions
+skip_install = true
+commands = check-python-versions {posargs}
