Automate --help message updates in the README with cog
Reminder to self: use `tox -e cog -- -r` to re-generate the README.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,6 +85,7 @@ jobs:
           - isort
           - check-manifest
           - check-python-versions
+          - cog
 
     steps:
       - name: Git clone
