--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,18 @@
 [tox]
-envlist = py27,py37,py38,py39,py310,pypy,pypy3
+envlist =
+    py27,
+    py37,
+    py38,
+    py39,
+    py310,
+    pypy,
+    pypy3,
+    flake8,
+    isort,
+    check-python-versions,
+    check-manifest,
+    coverage,
+    cog,
 
 [testenv]
 deps =
@@ -50,3 +63,11 @@ commands = check-manifest {posargs}
 deps = check-python-versions
 skip_install = true
 commands = check-python-versions {posargs}
+
+[testenv:cog]
+# NB: the argparse generated --help text in the README.rst depends on the
+# Python version, e.g. python 3.9 says "optional arguments:" but 3.10 says
+# "options:"
+basepython = python3.10
+deps = cogapp
+commands = cog {posargs:--check} README.rst
