--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,15 +23,12 @@ jobs:
       matrix:
         optional: [false]
         python-version:
-          - "2.7"
           - "3.7"
           - "3.8"
           - "3.9"
           - "3.10"
           - "3.11"
         include:
-          - python-version: "pypy2"
-            optional: true
           - python-version: "pypy-3.7"
             optional: true
 
@@ -57,7 +54,7 @@ jobs:
         run: |
           python -m pip install -U pip
           python -m pip install -U setuptools wheel
-          python -m pip install -U pytest coverage coverage-python-version coveralls
+          python -m pip install -U pytest coverage coveralls
           python -m pip install -e .
 
       - name: Run tests
@@ -68,7 +65,6 @@ jobs:
 
       - name: Report to coveralls
         run: coveralls
-        if: "matrix.python-version != '2.7' && matrix.python-version != 'pypy2'"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           COVERALLS_SERVICE_NAME: github
