Add tox -e cog-apply
Because I will never ever remember `tox -e cog -- -r` as the command to
fix the README.

--- a/tox.ini
+++ b/tox.ini
@@ -58,3 +58,8 @@ commands = check-python-versions {posargs}
 basepython = python3.10
 deps = cogapp
 commands = cog {posargs:--check} README.rst
+
+[testenv:cog-apply]
+basepython = {[testenv:cog]basepython}
+deps = {[testenv:cog]deps}
+commands = cog -r README.rst
